--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dio: ^3.0.9
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+  dio: ^3.0.9
+  geolocation: ^1.1.2
+  zefyr: ^0.11.0
+  app_settings: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -46,8 +49,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+   - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -61,17 +64,45 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: NHL
+      fonts:
+        - asset: assets/fonts/NHLENYRO.ttf
+
+    - family: NHL2
+      fonts:
+        - asset: assets/fonts/NHLEPho_.ttf
+
+    - family: A
+      fonts:
+        - asset: assets/fonts/A.ttf
+
+    - family: F
+      fonts:
+        - asset: assets/fonts/F.ttf
+    
+    - family: FL
+      fonts:
+        - asset: assets/fonts/FL.ttf
+    
+    - family: D
+      fonts:
+        - asset: assets/fonts/D.otf
+    
+    - family: "AD"
+      fonts:
+        - asset: assets/fonts/AD.otf
+    
+    - family: "M"
+      fonts:
+        - asset: assets/fonts/MS.otf
+
+    - family: "FS"
+      fonts:
+        - asset: assets/fonts/FS.ttf
+    
+    - family: "CB"
+      fonts:
+        - asset: assets/fonts/CB.otf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
