--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   dio: ^3.0.9
   zefyr: ^0.11.0
   app_settings: ^4.0.0
+  fluttertoast: ^3.1.0
+  intl: ^0.16.1
 
 dev_dependencies:
   flutter_test:
