--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   zefyr: ^0.11.0
   app_settings: ^4.0.0
   fluttertoast: ^3.1.0
+  cool_ui: ^0.2.1
   intl: ^0.16.1
 
 dev_dependencies:
