--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,8 @@ environment:
 
 dependencies:
   flutter:
-    sdk: flutter
+    sdk: flutter  
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -34,6 +35,7 @@ dependencies:
   fluttertoast: ^3.1.0
   cool_ui: ^0.2.1
   intl: ^0.16.1
+  image_picker: ^0.6.1+4
 
 dev_dependencies:
   flutter_test:
