--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cool_ui: ^0.2.1
   intl: ^0.16.1
   image_picker: ^0.6.1+4
+  sticky_headers: ^0.1.8
 
 dev_dependencies:
   flutter_test:
