solve the add notes image

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   fluttertoast: ^4.0.0
   cool_ui: ^0.2.1
   intl: ^0.16.1
-  image_picker: ^0.6.1+4
+  image_picker: ^0.6.7
   fab_menu: ^0.0.2
   sticky_headers: ^0.1.8
   quill_delta: ^1.0.0
