--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -42,10 +42,12 @@
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 
-	<key>NSLocationWhenInUseUsageDescription</key>
-  	<string>Reason why app needs location</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>Reason why app needs location</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Need to upload image</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Need to upload image</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Need to upload image</string>
 
 </dict>
 </plist>
