--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   sticky_headers: ^0.1.8
   quill_delta: ^1.0.0
 
+  redux: ^3.0.0
+  flutter_redux: ^0.5.3
+  redux_logging: ^0.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
